src/test/testFiles/invalid/semanticErrors/pushWithTwoArgs.manimdsl
let x = new Stack<number>();
x.push(1, 2);